# nonebot-adapter-email

./: .gitignore  .markdownlint.yaml  README.md  pyproject.toml
docs/: logo.fig
example/: auto_reply.py  bot.py
nonebot/adapters/email/: __init__.py  adapter.py  bot.py  config.py  event.py  log.py  message.py  utils.py
tests/: conftest.py  test_event.py
tests/plus/: auto_reply.py
