[tool.poetry]
name = "nonebot-adapter-email"
version = "0.1.0"
description = "A nonebot adapter for email."
authors = ["AzideCupric <rukuy@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AzideCupric/nonebot-adapter-email"
repository = "https://github.com/AzideCupric/nonebot-adapter-email"
documentation = "https://github.com/AzideCupric/nonebot-adapter-email/readme.md"
keywords = []
classifiers = []
packages = [
    {include = "*", from = "nonebot"},
]

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = "^2.0.1"

[tool.poetry.group.dev.dependencies]
nonemoji = "^0.1.2"
pre-commit = "^3.1.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.0.275"
isort = "^5.10.1"
black = "^23.1.0"

[tool.black]
line-length = 120
target-version = ["py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
preview = true
line_length = 120
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901"]

line-length = 120
target-version = "py310"

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
